Add documentation categories
